test/classes/ferguson/delete-free/owned-error-nonclass.good
owned-error-nonclass.chpl:7: In function 'run':
owned-error-nonclass.chpl:8: error: Cannot use new owned with record R
